--- a/web/package.json
+++ b/web/package.json
@@ -44,7 +44,11 @@
   },
   "devDependencies": {
     "@craco/craco": "^6.4.3",
+    "autoprefixer": "^10.4.7",
+    "craco-swc": "^0.5.1",
     "cross-env": "^7.0.3",
-    "rimraf": "^3.0.2"
+    "postcss": "^8.4.14",
+    "rimraf": "^3.0.2",
+    "tailwindcss": "^3.0.24"
   }
 }
