--- a/web/package.json
+++ b/web/package.json
@@ -1,54 +1,25 @@
 {
-  "name": "web",
-  "version": "0.1.0",
-  "homepage": "web/build",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^26.0.24",
-    "@types/node": "^16.11.18",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-scripts": "5.0.0",
-    "typescript": "^4.5.5",
-    "web-vitals": "^2.1.3"
-  },
+  "name": "vite-template-solid",
+  "version": "0.0.0",
+  "description": "",
   "scripts": {
-    "start": "cross-env PUBLIC_URL=/ craco start",
-    "start:game": "cross-env IN_GAME_DEV=1 craco start",
-    "build": "rimraf build && craco build",
-    "test": "craco test",
-    "eject": "react-scripts eject"
+    "dev": "concurrently \"vite dev\" \"vite build --watch\"",
+    "build": "vite build",
+    "serve": "vite preview"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
+  "license": "MIT",
   "devDependencies": {
-    "@craco/craco": "^6.4.3",
-    "autoprefixer": "^10.4.7",
-    "craco-swc": "^0.5.1",
-    "cross-env": "^7.0.3",
-    "postcss": "^8.4.14",
-    "rimraf": "^3.0.2",
-    "tailwindcss": "^3.0.24"
+    "@types/node": "^18.11.18",
+    "@unocss/preset-mini": "^0.48.5",
+    "@unocss/vite": "^0.48.5",
+    "concurrently": "^7.6.0",
+    "typescript": "^4.9.4",
+    "vite": "^4.0.4",
+    "vite-plugin-solid": "^2.5.0"
+  },
+  "dependencies": {
+    "fs": "0.0.1-security",
+    "path": "^0.12.7",
+    "solid-js": "^1.6.9"
   }
 }
