--- a/web/package.json
+++ b/web/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "scripts": {
     "dev": "concurrently \"vite dev\" \"vite build --watch\"",
-    "build": "vite build",
-    "serve": "vite preview"
+    "build": "vite build"
   },
   "license": "MIT",
   "devDependencies": {
