--- a/web/package.json
+++ b/web/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "vite-template-solid",
+  "name": "web",
   "version": "0.0.0",
-  "description": "",
+  "description": "a frontend design for the fiveM",
+  "author": "Varkaria",
   "scripts": {
     "dev": "concurrently \"vite dev\" \"vite build --watch\"",
     "build": "vite build"
